--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -149,27 +149,50 @@ a:hover {
 
 ### あれ？何人に調査すればいいんだろう
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「ちょっといいかな」
+:::
 
-**私「なに？お父さん、真面目な顔して」**
+::: voice-daughter
+私「なに？お父さん、真面目な顔して」
+:::
 
+::: voice-father
 お父さん「サンプルサイズって計算した？」
+:::
 
-**私「サンプルサイズってなんのこと？」**
+::: voice-daughter
+私「サンプルサイズってなんのこと？」
+:::
 
+::: voice-father
 お父さん「ほら、がんサバイバーの調査するんでしょ。その人数のこと」
+:::
 
-**私「ああ、何人に調査するのかっていいたかったの。100人から調査票戻ってきたら上出来かなって思ってるけど」**
+::: voice-daughter
+私「ああ、何人に調査するのかっていいたかったの。100人から調査票戻ってきたら上出来かなって思ってるけど」
+:::
 
+::: voice-father
 お父さん「やっぱり計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
+:::
 
-**私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」**
+::: voice-daughter
+私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
+:::
 
+::: voice-father
 お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
+:::
 
-**私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」**
+::: voice-daughter
+私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
+:::
 
+::: voice-father
 お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
+:::
 
 表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
 
@@ -202,31 +225,57 @@ a:hover {
 | 0.45   | 1518 |  377 |  166 |   92 |
 | 0.50   | 1533 |  381 |  167 |   93 |
 
+::: voice-father
 お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたか表すために、95%信頼区間（confidence interval）をつけることになる」
+:::
 
-**私「ふんふん。つけることになるわけね」**
+::: voice-daughter
+私「ふんふん。つけることになるわけね」
+:::
 
+::: voice-father
 お父さん「仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
+:::
 
-**私「ああ、”50%（95%CI 40～60%）”みたいな感じで出てくる、あれのことか。論文でみたことある。40〜60%の場合、95%信頼区間幅は20%ってことね」**
+::: voice-daughter
+私「ああ、”50%（95%CI 40～60%）”みたいな感じで出てくる、あれのことか。論文でみたことある。40〜60%の場合、95%信頼区間幅は20%ってことね」
+:::
 
+::: voice-father
 お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
+:::
 
-**私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」**
+::: voice-daughter
+私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
+:::
 
+::: voice-father
 お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、” π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
+:::
 
-**私「100人で足りてるじゃん」**
+::: voice-daughter
+私「100人で足りてるじゃん」
+:::
 
+::: voice-father
 お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。「信頼区間アプローチ」といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、「仮説検定アプローチ」といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+:::
 
-**私「仮説検定ってp値のこと？」**
+::: voice-daughter
+私「仮説検定ってp値のこと？」
+:::
 
+::: voice-father
 お父さん「そうそう。そっちの話をするなら、p値とαエラー・βエラーの関係を説明しないとだな。この前、どこまで話したっけ？」
+:::
 
-**私「p値とかASA声明については聞いたよね。でも、エラーって言葉はでてこなかったな」**
+::: voice-daughter
+私「p値とかASA声明については聞いたよね。でも、エラーって言葉はでてこなかったな」
+:::
 
+::: voice-father
 お父さん「じゃあ、話はそこからだね」
+:::
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **αエラーとβエラー**
@@ -247,21 +296,37 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ややこしいのですが、JCOG9502では症例登録に予定より時間がかかったため、有意水準10%、つまり全生存期間の片側p値を0.1と比べる方式が採用されました。この方式では、LTAに延命効果がなくても、100回に10回はαエラーが生じてしまい、LTAが有効と判定してしまうことになります。つまり、有意水準が5%から10%に高くなると、判断を誤る確率が増える代わりに、サンプルサイズが小さくて済むわけです。
 :::
 
-**私「いきなりαとかβとか確率とかいわれてもなあ。ついていけないな」**
+::: voice-daughter
+私「いきなりαとかβとか確率とかいわれてもなあ。ついていけないな」
+:::
 
+::: voice-father
 お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と同じかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
+:::
 
-**私「理屈じゃなくて、数字の実感がないのよ。判断ミスをする確率なんて低い方がいいに決まってるよね。でもどのくらいの確率にするものなの？」**
+::: voice-daughter
+私「理屈じゃなくて、数字の実感がないのよ。判断ミスをする確率なんて低い方がいいに決まってるよね。でもどのくらいの確率にするものなの？」
+:::
 
+::: voice-father
 お父さん「JCOG9502の論文読んだんでしょ。どう書いてあった？」
+:::
 
-**私「はいはいみますみます。” The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」**
+::: voice-daughter
+私「はいはいみますみます。” The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
+:::
 
+::: voice-father
 お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で”新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している”って述べている（Green, et al. 2013）。検出力90%はβエラー0.1のことね」
+:::
 
-**私「私の研究でもサンプルサイズは250人でよくない？」**
+::: voice-daughter
+私「私の研究でもサンプルサイズは250人でよくない？」
+:::
 
+::: voice-father
 お父さん「雑だけどいい線いってる。大体それくらいになりそうだけど、サンプルサイズの計算結果を表にしてあげるから、ちゃんとそれをみて決めよう。いろんな状況があり得るけど、両側αエラー0.05で、βエラーは0.2（検出力0.8）と0.1（検出力0.9）という設定がもっともよく用いられるから、そのときのサンプルサイズを紹介するね。同じ人数の2つの群を比較することを想定しているから、群ごとの人数はサンプルサイズの半分になる」
+:::
 
 ::: panel-tabset
 ### 検出力80%
@@ -295,10 +360,6 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 両側 α=0.05, 1−β=0.9\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
-表3. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
-両側 α=0.05, 1−β=0.9\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
 | π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
 |------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
 | 0.15 |   1290 |    — |    — |    — |    — |    — |    — |    — |
@@ -319,19 +380,33 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 | 0.90 |     26 |   32 |   38 |   50 |   68 |  100 |  180 |  548 |
 :::
 
+::: voice-father
 お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮説の値でいいよ」
+:::
 
-**私「むずいな。どのくらいなんだろう。なにも不利なことがないなら、手術した後、1年以内に80%は復職してほしいかな。ストーマがあると20%から30%くらいは復職率が下がるんじゃない？調査してみないとわかんないけどね」**
+::: voice-daughter
+私「むずいな。どのくらいなんだろう。なにも不利なことがないなら、手術した後、1年以内に80%は復職してほしいかな。ストーマがあると20%から30%くらいは復職率が下がるんじゃない？調査してみないとわかんないけどね」
+:::
 
+::: voice-father
 お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表2と3は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表3の対応箇所をみてみてよ」
+:::
 
-**私「202人って書いてある。これが調査しないといけない人数ってこと？」**
+::: voice-daughter
+私「202人って書いてある。これが調査しないといけない人数ってこと？」
+:::
 
+::: voice-father
 お父さん「そういうこと」
+:::
 
-**私「もし、202人の全員が1年間で追跡できなかったらどうするの？半年までしか調査できなかったとか」**
+::: voice-daughter
+私「もし、202人の全員が1年間で追跡できなかったらどうするの？半年までしか調査できなかったとか」
+:::
 
+::: voice-father
 お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表3は、検出力90%の検定を行うために必要なサンプルサイズで、表2はそれを検出力80%に緩めたときのもの。表2をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
+:::
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **サンプルサイズ設計**
@@ -352,31 +427,58 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
 :::
 
-**私「ふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」**
+::: voice-daughter
+私「ふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
+:::
 
+::: voice-father
 お父さん「うん」
+:::
 
-**私「いま考えてる統計解析って、ストーマ造設あり・なしと復職状況の関係を調べてたんだよね。以前に聞いた話だと、2値データだとロジスティック回帰、生存時間データだとCox回帰を使うんじゃなかったっけ。生存曲線とCox回帰は別の統計手法じゃない？」**
+::: voice-daughter
+私「いま考えてる統計解析って、ストーマ造設あり・なしと復職状況の関係を調べてたんだよね。以前に聞いた話だと、2値データだとロジスティック回帰、生存時間データだとCox回帰を使うんじゃなかったっけ。生存曲線とCox回帰は別の統計手法じゃない？」
+:::
 
+::: voice-father
 お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表2と3は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
+:::
 
-**私「でも、お父さん、観察研究だと交絡因子を調整しないといけないっていったじゃない」**
+::: voice-daughter
+私「でも、お父さん、観察研究だと交絡因子を調整しないといけないっていったじゃない」
+:::
 
+::: voice-father
 お父さん「うん、そういった。でも、交絡因子の影響を前もって予想することは無理だから、表2と3みたいなログランク検定のためのサンプルサイズの公式を、実際には使っている」
+:::
 
-**私「お父さん、あとね。表2と3に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね。**
+::: voice-daughter
+私「お父さん、あとね。表2と3に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね。
+:::
 
+::: voice-father
 お父さん「そうだよ、たいていの臨床試験の割付け比は1:1だからね」
+:::
 
-**私「でもストーマ保有者って、非保有者より少ないと思うんだけど。半数くらいかな」**
+::: voice-daughter
+私「でもストーマ保有者って、非保有者より少ないと思うんだけど。半数くらいかな」
+:::
 
+::: voice-father
 お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアを利用することになる。割付け比を、1:1から1:0.5、1:0.25に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう。検出力80%だと、サンプルサイズは152人から194人、294人になる」
+:::
 
-**私「へー。このソフトウェアは調査と臨床試験のためのものなの？」**
+::: voice-daughter
+私「へー。このソフトウェアは調査と臨床試験のためのものなの？」
+:::
 
+::: voice-father
 お父さん「診断研究やROC曲線にも使えるから、医学研究のほとんどに対応できると思う」
+:::
 
-**私「でも、サンプルサイズがすごく増えちゃった。調査する施設を増やすかどうか考えないと」**
+::: voice-daughter
+私「でも、サンプルサイズがすごく増えちゃった。調査する施設を増やすかどうか考えないと」
+:::
+:::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
@@ -393,6 +495,14 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 柔軟に考えてみましょう。生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。もし、予定された追跡期間を全員が完了したとしても、イベントがじゅうぶんに観察されなければ（つまり打ち切りが多かったら）、統計的なテクニックで中央値を計算することはできますが、バイアスが生じる可能性が高くなります。
 :::
+
+### 文献
+
+-  Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022
+
+- Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
+
+- Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013
 
 ### Continuation of their story
 
