--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -150,6 +150,7 @@ a:hover {
 
 ### 調査項目とデータの型
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「聞いていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」
 :::
@@ -279,6 +280,7 @@ a:hover {
 ::: voice-daughter
 私「だいたいわかった。この調査票、使わせてもらうね」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **統計手法を選ぶときの3つのポイント**
@@ -331,3 +333,7 @@ a:hover {
 標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
 
 :::
+
+### 文献
+
+- 田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022
