--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -150,7 +150,23 @@ a:hover {
 ### 調査で気をつけておくべきバイアス
 
 ::: voice-daughter
-私「お父さん、ハード なエンドポイントとソフト なエンドポイントって言い回しがあるじゃない？」
+私「ただいまーつかれたー。お父さん、甘いものない？」
+:::
+
+::: voice-father
+お父さん「いちご大福ならあるよ。コーヒーもちょうど淹れたところだ」
+:::
+
+::: voice-daughter
+私「ああ助かる。この時間帯に仕事が終わるとちょうど満員電車でさ、きついんだよね。診療時間の間もハードだったし」
+:::
+
+::: voice-father
+お父さん「おつかれさま。コーヒーはいったよ」
+:::
+
+::: voice-daughter
+私「ありがとう。あのさ、ハードなエンドポイントとソフトなエンドポイントって言い回しがあるじゃない？」
 :::
 
 ::: voice-father
@@ -158,7 +174,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、OSはハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
+私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、OSはハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。私の調査が否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
 :::
 
 ::: voice-father
@@ -170,11 +186,11 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「よくある議論を挙げると、OSはハード、PFS（無増悪生存期間）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういったケースをイベントとみなすかは議論がわかれるけど、こういった意味でPFSはソフトなエンドポイントって言われることがある」
+お父さん「よくある議論を挙げると、OSはハード、PFS（無増悪生存期間）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういうケースをイベントとみなすかは議論がわかれるけど、意見がわかれること自体でPFSはソフトなエンドポイントっていう人もいるね」
 :::
 
 ::: voice-daughter
-私「なるほど、ハード=客観的、ソフト=主観的ってことね。たしかに、私の調査票はソフトなエンドポイントって言われるわけだ。そもそも患者さんの主観を尋ねたいんだもんね」
+私「なるほど、ハード=客観的、ソフト=主観的ってことね。たしかに、私の調査票はソフトなエンドポイントっていわれるわけだ。そもそも患者さんの主観を尋ねるための調査だもんね」
 :::
 
 ::: voice-father
@@ -186,7 +202,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「主観が入るとバイアスが生じやすいとは言えるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの」
+お父さん「主観が入るとバイアスが生じやすいとはいえるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの」
 :::
 
 ::: voice-daughter
