--- a/jp/clinical-trial-1.qmd
+++ b/jp/clinical-trial-1.qmd
@@ -3,6 +3,8 @@ format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
 body {
   margin: 0;
@@ -135,10 +137,12 @@ a:hover {
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
+
 # Story and Quiz − Clinical trial I
 
 ::: serif-block
@@ -153,52 +157,94 @@ a:hover {
 
     はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。おなじ復職状況でも、2値データと生存時間データの2通り解析の仕方があると教えられた娘。むかし読んだ論文で、OS・DFSという用語が出てきたことを思い出すのだった。
 
-**私「お父さん、いま時間ある？前にOS（全生存期間）とDFS（無病生存期間）の違いについて教えてくれたでしょ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「お父さん、いま時間ある？前にOS（全生存期間）とDFS（無病生存期間）の違いについて教えてくれたでしょ」**
+:::
 
+::: voice-father
 お父さん「そんなこともあったね」
+:::
 
-**私「真面目に論文を読んでるんだけど、細かいところがよくわかんないんだ。特に統計っぽい言葉の意味がね。ちょっとこの図を見てよ。JCOG9502っていう胃がん手術の術式を比べた臨床試験の論文なの（Sasako, et al. 2006）。TH群は開腹創から下縦隔へアプローチする標準的な手術を受けた患者、LTA群は左開胸開腹連続切開によって下縦隔郭清も行った患者のことね」**
+::: voice-daughter
+私「真面目に論文を読んでるんだけど、細かいところがよくわかんないんだ。特に統計っぽい言葉の意味がね。ちょっとこの図を見てよ。JCOG9502っていう胃がん手術の術式を比べた臨床試験の論文なの（Sasako, et al. 2006）。TH群は開腹創から下縦隔へアプローチする標準的な手術を受けた患者、LTA群は左開胸開腹連続切開によって下縦隔郭清も行った患者のことね」
+:::
 
-![図1.png](%25E5%259B%25B31.png)
+![](clinical-trial-2.png)
 
+
+::: voice-father
 お父さん「この図は、統計学でいうKaplan-Meier曲線 だよ。図AがOS、図BがDFSだね。どちらの図でも、TH群（青の曲線）よりLTA群（赤の曲線）の方が下にある。つまりTH群の方が、治療成績がいい」
+:::
 
-**私「そこまではわかるの。知りたいのは細かいところなんだってば。最初につまずいたのが、生存曲線の下に書いてあるアットリスク数 （number at risk）でね。これって時点ごとの人数のことでしょ。図Aと図Bの手術時点の人数を見てよ。図Aは82人と85人、図Bは76人と75人で、左右で解析された人数が違うの。理由はわかる？」**
+::: voice-daughter
+私「そこまではわかるの。知りたいのは細かいところなんだってば。最初につまずいたのが、生存曲線の下に書いてあるアットリスク数 （number at risk）でね。これって時点ごとの人数のことでしょ。図Aと図Bの手術時点の人数を見てよ。図Aは82人と85人、図Bは76人と75人で、左右で解析された人数が違うの。理由はわかる？」**
+:::
 
+::: voice-father
 お父さん「これは結構難しいな。臨床試験で解析対象から除外されるって、プロトコール逸脱とかよっぽどのことだと思うけど。ふむ。DFSの解析を行うには再発したかどうかを評価しないといけないよね。そのあたり、なにか理由はありそう？」
+:::
 
-**私「そっか、腫瘍組織が完全に切除できなかったら、再発とみなしていないのかもしれない。えーっと、論文を読むと、確かにR0切除ができたのは151人って書いてある。そのせいだな多分。それとね、7年目あたりから人数が数人しかいなくなってるの。これってどう思う？」**
+::: voice-daughter
+私「そっか、腫瘍組織が完全に切除できなかったら、再発とみなしていないのかもしれない。えーっと、論文を読むと、確かにR0切除ができたのは151人って書いてある。そのせいだな多分。それとね、7年目あたりから人数が数人しかいなくなってるの。これってどう思う？」
+:::
 
+::: voice-father
 お父さん「この試験って登録何年で、追跡何年なの？それによるでしょ」
+:::
 
-**私「登録期間は1995年から2003年だから、8年。生存時間データは2006年までのものを解析したって書いてあるな。そうすると追跡期間は最短で3年かな」**
+::: voice-daughter
+私「登録期間は1995年から2003年だから、8年。生存時間データは2006年までのものを解析したって書いてあるな。そうすると追跡期間は最短で3年かな」**
+:::
 
+::: voice-father
 お父さん「そうすると、必ずしも術後3年以上追跡されるわけじゃないよね。以前、”打ち切り”について話したことがあったよね。生存時間データは、イベントと打ち切りから構成される。3年以内に打ち切りが多いのは不自然だけど、3年以降に追跡が打ち切られるのは計画通りのことだよ」
+:::
 
-**私「打ち切りがいつ起きたかなんて、論文を読んでも書いてないよね？」**
+::: voice-daughter
+私「打ち切りがいつ起きたかなんて、論文を読んでも書いてないよね？」
+:::
 
+::: voice-father
 お父さん「そんなことはない。生存曲線にひげが立ってるでしょ」
+:::
 
-**私「このぴょこぴょこしたやつ？」**
+::: voice-daughter
+私「このぴょこぴょこしたやつ？」
+:::
 
+::: voice-father
 お父さん「そうそう。それが打ち切りのシンボル。時間原点の直後にひげがたくさん立ってたら、なにが起きてると思う？研究を始めたらすぐ、患者さんが追跡できなくなって、打ち切りになったってこと。そんな変な研究にはバイアスがあるかもしれないよね」
+:::
 
-**私「図では、3年以内のひげは数えるほどしかない。じゃあほとんどの患者は3年以上追跡できたんだ。いい研究なんだね」**
+::: voice-daughter
+私「図では、3年以内のひげは数えるほどしかない。じゃあほとんどの患者は3年以上追跡できたんだ。いい研究なんだね」
 
 -   アットリスク数は時点ごとの人数を表す
 -   ひげは打ち切りを表す
 -   図に示されない情報だが登録期間・追跡期間も要確認
+:::
 
-**私「あとさ、図に書かれている英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんて言うか教えてよ」**
+私「あとさ、図に書かれている英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんて言うか教えてよ」**
+:::
 
+::: voice-father
 お父さん「ハザード比、95%信頼区間、片側p値、両側p値かな。このあたりを勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がおすすめ（Green, et al. 2013）」
+:::
 
-**私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比 が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」**
+::: voice-daughter
+私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比 が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
+:::
 
+::: voice-father
 お父さん「そういうことだね。ハザードはイベント/観察人年で求める“率”で、ハザード比はその2群間の“比”だから。似たような指標のオッズ比やリスク比は、時間経過を考慮しないから、生存時間解析には使われない」
+:::
 
-**私「p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」**
+::: voice-daughter
+私「p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
+:::
 
+::: voice-father
 お父さん「大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。 p値 に関する説明をいくつかしてみようか。
 
 1.  p値は帰無仮説が正しい確率である
@@ -208,34 +254,59 @@ a:hover {
 お父さん「JCOG9502の場合、帰無仮説は”LTA群の全生存曲線は、TH群の全生存曲線と等しい”ってことだよ。まず1について聞くけど、JCOG9502のp値は、”LTA群とTH群に生存曲線に差がない確率”を意味すると思う？」
 
 **私「それでいいんじゃない？」**
+:::
 
+::: voice-father
 お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、もう少し厳密に考えてみてほしいんだ。“LTA群とTH群に生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
 
 **私「はーん。そういう理屈っぽいことが言いたかったわけね。じゃあそういう言い回しはやめます」**
+:::
 
+::: voice-father
 お父さん「うんうん。じゃあ別の次の説明をして見てみよう。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
 
 **私「普通そう考えるんじゃない？」**
+:::
 
+::: voice-father
 お父さん「でもさっきの図のp値を見てよ。p=0.15からp=0.92まで4つのp値が示されているけど、どれも小さくはないでしょ」
+:::
 
-**私「うん」**
+::: voice-daughter
+私「うん」
+:::
 
+::: voice-father
 お父さん「じゃあ科学的に重要じゃないってこと？」
+:::
 
-**私「そういう意味で言ったわけじゃないけど」**
+::: voice-daughter
+私「そういう意味で言ったわけじゃないけど」
+:::
 
+::: voice-father
 お父さん「だよね。p値が小さい方が重要な研究結果だって考えがちだけど、それははっきりとした間違いだと考えてください。論文を読むとき、p値に注目すると見方が偏ってしまう」
+:::
 
-**私「はいはい。お父さん、話長くない？」**
+::: voice-daughter
+私「はいはい。お父さん、話長くない？」
+:::
 
+::: voice-father
 お父さん「もう最後にするよ。説明3の“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”についてはどう？これは正しいかな？」
+:::
 
-**私「教科書かなにかで、p値は、仮説を棄却するためのもので、採択しちゃだめって読んだ気がする。この最後の説明も、やっぱり間違いなんでしょ。でもさ、実際問題として、有意差がつかなかったらどうなるの？たとえば実薬AとBを比較する臨床試験だったとして、AとBの効果は同等と結論に書いていいの？」**
+::: voice-daughter
+私「教科書かなにかで、p値は、仮説を棄却するためのもので、採択しちゃだめって読んだ気がする。この最後の説明も、やっぱり間違いなんでしょ。でもさ、実際問題として、有意差がつかなかったらどうなるの？たとえば実薬AとBを比較する臨床試験だったとして、AとBの効果は同等と結論に書いていいの？」
+:::
 
+::: voice-father
 お父さん「それはルール違反だよ。この問いは、そういう間違いをさせないために出したんだ。帰無仮説が正しいことは、AとBの効果は同等っていう意味になるけど、有意差がないからって、それを採択してはいけない。“同等”や“劣らない”という結論を出すには、同等性 （equivalence）試験や非劣性 （non-inferiority）試験を組む必要がある」
+:::
 
-**私「ふーん。そんなことわざわざやるかなあ。統計学は“有意差がないこと”と“同等”の区別にうるさいってことね」**
+::: voice-daughter
+私「ふーん。そんなことわざわざやるかなあ。統計学は“有意差がないこと”と“同等”の区別にうるさいってことね」
+::::::::::::::::::::::::::::::::::::
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ホパテの悲劇**
@@ -244,7 +315,6 @@ a:hover {
 :::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
-
 p値の説明として正しいものは、次のうちどれでしょうか。
 
 1.  帰無仮説が正しい確率である
@@ -258,6 +328,12 @@ p値の説明として正しいものは、次のうちどれでしょうか。
 
 有意と判断する基準（有意水準）が5%であれば3は正しいのですが、試験によっては有意水準が5%でないこともあります。実はJCOG9502では中間解析が行われていて、その結果、早期中止になったという経緯があります。一般に中間解析では、5%より低い有意水準で検定が行われます。ただし、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためでした。
 :::
+
+### 文献
+
+- Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
+
+- Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013
 
 ### Continuation of their story
 
