--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -150,7 +150,7 @@ a:hover {
 
 ### アウトカムってなに？
 
-:::: dialogue
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「さっきのアウトカムについてなんだけどね。ジャーナルクラブで臨床試験の論文を読むと出てくる”OS”とか”DFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSはがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
 :::
@@ -217,7 +217,7 @@ a:hover {
 ::: voice-father
 お父さん「じゃあ、生存時間の原点について、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
 :::
-::::
+:::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note title="シミュレーションデータ（再発あり）の生成"}
@@ -372,3 +372,15 @@ OS、DFS、RFSは、特に術後補助化学療法の有効性を評価すると
 
 Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
 :::
+
+### 文献
+
+- [JCOGプロトコールマニュアル version 3.6 [Internet]. 東京: Japan Clinical Oncology Group; 2021](http://www.jcog.jp/doctor/tool/manual.html) 
+
+- [薬生薬審発0331第1号. 抗悪性腫瘍薬の臨床評価方法に関するガイドライン [Internet]. 東京: 厚生労働省医薬・生活衛生局医薬品審査管理課長; 2021](https://www.mhlw.go.jp/web/t_doc?dataId=00tc5801&dataType=1&pageNo=1)
+
+- Biomarkers Definitions Working Group. Biomarkers and surrogate endpoints: preferred definitions and conceptual framework. Clin Pharmacol Ther 2001;69(3):89-95
+
+- Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
+
+- Kim C and Prasad V. Strength of validation for surrogate end points used in the US Food and Drug Administration's approval of oncology drugs. Mayo Clin Proc 2016; S0025-6196(16)00125-7
