--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -233,7 +233,7 @@ a:hover {
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は1です。**
+-   **正解は1です**
 
 どちらも中間媒介因子ですが、上の図では、E→Dという直接の因果関係がありますよね。下の図でも、EはCに作用し、CはDに作用する関係があります。つまり因果関係はないというのは言い過ぎで、間接的な因果関係があるという解釈が正解になります。
 :::
