--- a/jp/clinical-trial-1.qmd
+++ b/jp/clinical-trial-1.qmd
@@ -324,7 +324,7 @@ p値の説明として正しいものは、次のうちどれでしょうか。
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は4です。**
+-   **正解は4です**
 
 有意と判断する基準（有意水準）が5%であれば3は正しいのですが、試験によっては有意水準が5%でないこともあります。実はJCOG9502では中間解析が行われていて、その結果、早期中止になったという経緯があります。一般に中間解析では、5%より低い有意水準で検定が行われます。ただし、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためでした。
 :::
