--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -244,7 +244,7 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は4です。**
+-   **正解は4です**
 
 一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
 
