--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -328,7 +328,7 @@ a:hover {
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は2です。**
+-   **正解は2です**
 
 中央判定と施設判定のうち、先に起きたものを採用すると、無増悪生存期間が短くなる方向にバイアスが生じるため、適切ではありません。
 
