--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -260,7 +260,7 @@ a:hover {
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は3です。**
+-   **正解は3です**
 
 サンプルサイズが小さすぎることが、ランダム誤差の一番の原因です。こう考えると、ランダム誤差・バイアスのどちらも、研究計画段階でじゅうぶんに検討しておかないと、後から取り返しがつかないかもしれません。
 :::
