--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -368,7 +368,7 @@ OS、DFS、RFSは、特に術後補助化学療法の有効性を評価すると
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は2です。**
+-   **正解は2です**
 
 Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
 :::
