--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -328,7 +328,7 @@ a:hover {
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は2です。**
+-   **正解は2です**
 
 標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
 
