--- a/jp/clinical-trial-1.qmd
+++ b/jp/clinical-trial-1.qmd
@@ -159,7 +159,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、いま時間ある？前にOS（全生存期間）とDFS（無病生存期間）の違いについて教えてくれたでしょ」
+私「お父さん、いま時間ある？前に全生存期間（OS）と無病生存期間（DFS）の違いについて教えてくれたでしょ」
 :::
 
 ::: voice-father
@@ -392,11 +392,7 @@ p値の説明として正しいものは、次のうちどれでしょうか。
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-<<<<<<< HEAD
 -   **正解は4です**
-=======
-- **正解は4です。**
->>>>>>> b8f6c033c0197b58efc91caa32358a81df6008cc
 
 有意と判断する基準（有意水準）が5%であれば3は正しいのですが、試験によっては有意水準が5%でないこともあります。実はJCOG9502では中間解析が行われていて、その結果、早期中止になったという経緯があります。一般に中間解析では、5%より低い有意水準で検定が行われます。ただし、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためでした。
 :::
