--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -199,7 +199,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「2値データを集計するときはtable()。p値を計算するときはchisq.test()、fisher.test()。複雑な解析はglm(family = binomial) みたいな回帰モデル。生存時間データだと、survfit()、coxph()、それからcifplot()みたいな関数が出てくる」
+お父さん「2値データを集計するときはtable()。p値を計算するときはchisq.test()、fisher.test()。複雑な解析はglm(family = binomial) みたいな回帰モデル。生存時間データだと、coxph()やcifplot()みたいな関数が出てくる」
 :::
 
 ::: voice-daughter
@@ -381,7 +381,7 @@ cifplot(Event(time, status) ~ stoma,
 ::: {.callout-note collapse="true" title="答えはこちら"}
 -   **正解は4です**
 
-割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、(1)100%を超えない、(2)人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
 
 「打率」は安打数÷打数であり、「割合」になります。
 
