--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -155,7 +155,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
+娘「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
@@ -278,178 +278,154 @@ calculate_coverage <- function(model=c("coxph","finegray"), n, hr1, hr2, hr_true
 }
 
 library(survival)
-coverage_coxph <- calculate_coverage(model="coxph", n=200, hr1=2, hr2=1.5, hr_true=1.5)
-print(coverage_coxph)
+coverage_200 <- calculate_coverage(model="coxph", n=200, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_200)
 ```
 :::
 
-想定としては：
-
-coverage_hat ≈ 0.94〜0.96 あたり
-
-se_mc ≈ 0.007 前後（nsim=1000 の場合）
-
-娘「coverage_hat が 0.95 に近ければ、
-“95%CI の意味はだいたい守られている”ってことね。」
-
-父「そう。しかも今回はモデル仮定が完全に正しい設定だから、理想に一番近い結果になっているはず」
-
-◆ 4. サンプルサイズを変えるとどうなる？
-
-娘がさらに食いつく。
-
-娘「n を小さくすると coverage はどうなるの？」
-
-父「いい質問。n を 50, 100, 200, 500 と変えてみよう。」
-
-
-父「n が小さいときは、coverage が 0.95 から少しズレることもある。
-でも nsim を増やすと、そのブレの傾向も見えてくるよ。」
-
-◆ 5. “95%CIの意味”を娘なりにまとめる
-
-娘「じゃあ結局、“95%信頼区間”ってどう理解すればいいの？」
-
-父はゆっくり答える。
-
-🌟 父「**同じようなサンプルを何度も集めて
-
-毎回 95%CI を作ったとき、
-“真のパラメータを含む区間” の割合が 0.95 になるように
-設計された仕組みだよ。**」
-
-娘「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね。」
-
-父「そう。“手続きとしての長期的な性能”の話なんだ。」
-
-娘はコーヒーを飲みながら頷いた。
-
-娘「じゃあ、coverage シミュレーションって
-『教科書の約束がちゃんと守られているかを実験で確認する』
-ってことか。」
-
-父「その通り。」
-
-
-
-
-
 ::: voice-daughter
-私「いきなりαとかβとか確率とかいわれてもなあ。ついていけないな」
+娘「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
 :::
 
 ::: voice-father
-お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と同じかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
+お父さん「教科書的にいうとね。同じようなデータを何度も集めて、毎回95%信頼区間を作ったとき、“真の値を含む区間”の割合が0.95になるように設計された指標なんだ。これを"in the long run"の性能って言ったりする。でも、概念的に理解するよりも、シミュレーションを行った方がわかりやすいと思って」
 :::
 
 ::: voice-daughter
-私「理屈じゃなくて、数字の実感がないのよ。判断ミスをする確率なんて低い方がいいに決まってるよね。でもどのくらいの確率にするものなの？」
+娘「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
 :::
 
 ::: voice-father
-お父さん「JCOG9502の論文読んだんでしょ。どう書いてあった？」
+お父さん「そうだね」
 :::
 
 ::: voice-daughter
-私「はいはいみますみます。” The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
+娘「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
 :::
 
 ::: voice-father
-お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で”新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している”って述べている（Green, et al. 2013）。検出力90%はβエラー0.1のことね」
+お父さん「理論的には当たりにくくなったりはしないよ。95%信頼区間の被覆確率はサンプルサイズによらず95%になるはず。n=100、200、400、800のシミュレーション結果をみてみようか」
+:::
+
+```{r warning=FALSE}
+coverage_100 <- calculate_coverage(model="coxph", n=100, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_400 <- calculate_coverage(model="coxph", n=400, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_800 <- calculate_coverage(model="coxph", n=800, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_100)
+print(coverage_200)
+print(coverage_400)
+print(coverage_800)
+```
+
+::: voice-daughter
+娘「ほんとだ。じゃあ調査人数は何人でもいいってことだ」
+:::
+
+::: voice-father
+お父さん「どういうこと？」
 :::
 
 ::: voice-daughter
-私「私の研究でもサンプルサイズは250人でよくない？」
+娘「がんサバイバーの調査票を何人に送るかってこと。だって信頼区間の性能は変わらないんでしょ」
 :::
 
 ::: voice-father
-お父さん「雑だけどいい線いってる。大体それくらいになりそうだけど、サンプルサイズの計算結果を表にしてあげるから、ちゃんとそれをみて決めよう。いろんな状況があり得るけど、両側αエラー0.05で、βエラーは0.2（検出力0.8）と0.1（検出力0.9）という設定がもっともよく用いられるから、そのときのサンプルサイズを紹介するね。同じ人数の2つの群を比較することを想定しているから、群ごとの人数はサンプルサイズの半分になる」
-:::
-
-::: panel-tabset
-### 検出力80%
-
-表2. 2群の生存曲線を比較するためのサンプルサイズ（検出力 80%）\
-両側 α=0.05, 1−β=0.8\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |    964 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    296 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    156 | 1826 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    102 |  506 |    — |    — |    — |    — |    — |    — |
-| 0.35 |     74 |  246 | 2486 |    — |    — |    — |    — |    — |
-| 0.40 |     58 |  152 |  658 |    — |    — |    — |    — |    — |
-| 0.45 |     48 |  104 |  308 | 2894 |    — |    — |    — |    — |
-| 0.50 |     42 |   78 |  182 |  744 |    — |    — |    — |    — |
-| 0.55 |     36 |   62 |  122 |  340 | 3034 |    — |    — |    — |
-| 0.60 |     32 |   52 |   90 |  198 |  764 |    — |    — |    — |
-| 0.65 |     28 |   42 |   70 |  130 |  342 | 2900 |    — |    — |
-| 0.70 |     26 |   38 |   54 |   92 |  194 |  712 |    — |    — |
-| 0.75 |     24 |   34 |   38 |   70 |  124 |  312 | 2492 |    — |
-| 0.80 |     22 |   30 |   38 |   56 |   86 |  174 |  592 |    — |
-| 0.85 |     22 |   26 |   34 |   46 |   66 |  110 |  254 | 1818 |
-| 0.90 |     20 |   26 |   30 |   38 |   50 |  136 |  136 |  414 |
-
-### 検出力90%
-
-表3. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
-両側 α=0.05, 1−β=0.9\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |   1290 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    396 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    208 | 2444 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    136 |  676 |    — |    — |    — |    — |    — |    — |
-| 0.35 |    100 |  330 | 3330 |    — |    — |    — |    — |    — |
-| 0.40 |     78 |  202 |  880 |    — |    — |    — |    — |    — |
-| 0.45 |     64 |  138 |  412 | 3876 |    — |    — |    — |    — |
-| 0.50 |     54 |  104 |  242 |  996 |    — |    — |    — |    — |
-| 0.55 |     46 |   82 |  162 |  454 | 4060 |    — |    — |    — |
-| 0.60 |     42 |   68 |  120 |  264 | 1022 |    — |    — |    — |
-| 0.65 |     38 |   56 |   90 |  172 |  456 | 3880 |    — |    — |
-| 0.70 |     34 |   48 |   72 |  124 |  258 |  952 |    — |    — |
-| 0.75 |     32 |   42 |   60 |   92 |  166 |  416 | 3336 |    — |
-| 0.80 |     30 |   40 |   52 |   74 |  116 |  232 |  796 |    — |
-| 0.85 |     28 |   34 |   46 |   60 |   88 |  146 |  338 | 2436 |
-| 0.90 |     26 |   32 |   38 |   50 |   68 |  100 |  180 |  548 |
-:::
-
-::: voice-father
-お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮説の値でいいよ」
+お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。今のところ、何人に調査するつもりだった？」
 :::
 
 ::: voice-daughter
-私「むずいな。どのくらいなんだろう。なにも不利なことがないなら、手術した後、1年以内に80%は復職してほしいかな。ストーマがあると20%から30%くらいは復職率が下がるんじゃない？調査してみないとわかんないけどね」
+私「100人から調査票戻ってきたら上出来かなって思ってるけど」
 :::
 
 ::: voice-father
-お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表2と3は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表3の対応箇所をみてみてよ」
+お父さん「やっぱり必要サンプルサイズは計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
 :::
 
 ::: voice-daughter
-私「202人って書いてある。これが調査しないといけない人数ってこと？」
+私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
 :::
 
 ::: voice-father
-お父さん「そういうこと」
+お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
 :::
 
 ::: voice-daughter
-私「もし、202人の全員が1年間で追跡できなかったらどうするの？半年までしか調査できなかったとか」
+私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
 :::
 
 ::: voice-father
-お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表3は、検出力90%の検定を行うために必要なサンプルサイズで、表2はそれを検出力80%に緩めたときのもの。表2をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
+お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
 :::
+
+表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
+
+| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
+|--------|-----:|-----:|-----:|-----:|
+| 0.01   |  108 |   43 |   25 |   17 |
+| 0.02   |  152 |   52 |   29 |   19 |
+| 0.03   |  201 |   61 |   33 |   21 |
+| 0.04   |  252 |   72 |   37 |   23 |
+| 0.05   |  304 |   83 |   41 |   25 |
+| 0.06   |  356 |   95 |   46 |   28 |
+| 0.07   |  407 |  107 |   50 |   30 |
+| 0.08   |  458 |  118 |   55 |   32 |
+| 0.09   |  508 |  130 |   60 |   35 |
+| 0.10   |  554 |  139 |   62 |   35 |
+| 0.11   |  604 |  153 |   69 |   40 |
+| 0.12   |  651 |  164 |   74 |   42 |
+| 0.13   |  696 |  175 |   78 |   44 |
+| 0.14   |  741 |  186 |   83 |   47 |
+| 0.15   |  784 |  196 |   87 |   49 |
+| 0.16   |  826 |  206 |   92 |   51 |
+| 0.17   |  867 |  216 |   96 |   54 |
+| 0.18   |  907 |  226 |  100 |   56 |
+| 0.19   |  945 |  236 |  104 |   58 |
+| 0.20   |  982 |  245 |  108 |   60 |
+| 0.25   | 1150 |  286 |  126 |   70 |
+| 0.30   | 1288 |  320 |  141 |   78 |
+| 0.35   | 1395 |  347 |  152 |   84 |
+| 0.40   | 1472 |  366 |  161 |   89 |
+| 0.45   | 1518 |  377 |  166 |   92 |
+| 0.50   | 1533 |  381 |  167 |   93 |
+
+::: voice-father
+お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたかを表す指標が、95%信頼区間だよね。仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
+:::
+
+::: voice-daughter
+私「ああ、”50%（95%CI 40～60%）”みたいな感じで論文に書くことになるわけだ。40〜60%の場合、95%信頼区間幅は20%ってことね」
+:::
+
+::: voice-father
+お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
+:::
+
+::: voice-daughter
+私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
+:::
+
+::: voice-father
+お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
+:::
+
+::: voice-daughter
+私「100人で足りてるじゃん」
+:::
+
+::: voice-father
+お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。"信頼区間アプローチ"といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、"仮説検定アプローチ"といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+
+::: voice-daughter
+私「そっか。だいたいわかった。私、明日も出勤だから、また今度教えてよ。おやすみー」
+:::
+
+
+
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **サンプルサイズ設計**
 
-研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（表2と3）を用いることができます。
+研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
 
 信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
 
@@ -465,57 +441,6 @@ se_mc ≈ 0.007 前後（nsim=1000 の場合）
 サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
 :::
 
-::: voice-daughter
-私「ふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
-:::
-
-::: voice-father
-お父さん「うん」
-:::
-
-::: voice-daughter
-私「いま考えてる統計解析って、ストーマ造設あり・なしと復職状況の関係を調べてたんだよね。以前に聞いた話だと、2値データだとロジスティック回帰、生存時間データだとCox回帰を使うんじゃなかったっけ。生存曲線とCox回帰は別の統計手法じゃない？」
-:::
-
-::: voice-father
-お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表2と3は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
-:::
-
-::: voice-daughter
-私「でも、お父さん、観察研究だと交絡因子を調整しないといけないっていったじゃない」
-:::
-
-::: voice-father
-お父さん「うん、そういった。でも、交絡因子の影響を前もって予想することは無理だから、表2と3みたいなログランク検定のためのサンプルサイズの公式を、実際には使っている」
-:::
-
-::: voice-daughter
-私「お父さん、あとね。表2と3に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね。
-:::
-
-::: voice-father
-お父さん「そうだよ、たいていの臨床試験の割付け比は1:1だからね」
-:::
-
-::: voice-daughter
-私「でもストーマ保有者って、非保有者より少ないと思うんだけど。半数くらいかな」
-:::
-
-::: voice-father
-お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアを利用することになる。割付け比を、1:1から1:0.5、1:0.25に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう。検出力80%だと、サンプルサイズは152人から194人、294人になる」
-:::
-
-::: voice-daughter
-私「へー。このソフトウェアは調査と臨床試験のためのものなの？」
-:::
-
-::: voice-father
-お父さん「診断研究やROC曲線にも使えるから、医学研究のほとんどに対応できると思う」
-:::
-
-::: voice-daughter
-私「でも、サンプルサイズがすごく増えちゃった。調査する施設を増やすかどうか考えないと」
-:::
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
@@ -536,11 +461,11 @@ se_mc ≈ 0.007 前後（nsim=1000 の場合）
 
 ### 文献
 
--  Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022
+- [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022]（https://www.kyoto-up.or.jp/9784814003822.html）
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
 
-- Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013
+- [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
 
 ### Continuation of their story
 
