--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -171,94 +171,19 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「ああ、何人に調査するのかっていいたかったの。100人から調査票戻ってきたら上出来かなって思ってるけど」
+私「ああ、あれね。100人に調査するつもりだよ」
 :::
 
 ::: voice-father
-お父さん「やっぱり計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
+お父さん「この前は話が中途半端だったでしょ。続きを説明したくて。前回は“精度”の話。今日は“差を見つけたいとき”の話」
 :::
 
 ::: voice-daughter
-私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
+私「ん、わかった。サンプルサイズの話の続きね。なになに」
 :::
 
 ::: voice-father
-お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
-:::
-
-::: voice-daughter
-私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
-:::
-
-::: voice-father
-お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
-:::
-
-表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
-
-| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
-|--------|-----:|-----:|-----:|-----:|
-| 0.01   |  108 |   43 |   25 |   17 |
-| 0.02   |  152 |   52 |   29 |   19 |
-| 0.03   |  201 |   61 |   33 |   21 |
-| 0.04   |  252 |   72 |   37 |   23 |
-| 0.05   |  304 |   83 |   41 |   25 |
-| 0.06   |  356 |   95 |   46 |   28 |
-| 0.07   |  407 |  107 |   50 |   30 |
-| 0.08   |  458 |  118 |   55 |   32 |
-| 0.09   |  508 |  130 |   60 |   35 |
-| 0.10   |  554 |  139 |   62 |   35 |
-| 0.11   |  604 |  153 |   69 |   40 |
-| 0.12   |  651 |  164 |   74 |   42 |
-| 0.13   |  696 |  175 |   78 |   44 |
-| 0.14   |  741 |  186 |   83 |   47 |
-| 0.15   |  784 |  196 |   87 |   49 |
-| 0.16   |  826 |  206 |   92 |   51 |
-| 0.17   |  867 |  216 |   96 |   54 |
-| 0.18   |  907 |  226 |  100 |   56 |
-| 0.19   |  945 |  236 |  104 |   58 |
-| 0.20   |  982 |  245 |  108 |   60 |
-| 0.25   | 1150 |  286 |  126 |   70 |
-| 0.30   | 1288 |  320 |  141 |   78 |
-| 0.35   | 1395 |  347 |  152 |   84 |
-| 0.40   | 1472 |  366 |  161 |   89 |
-| 0.45   | 1518 |  377 |  166 |   92 |
-| 0.50   | 1533 |  381 |  167 |   93 |
-
-::: voice-father
-お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたか表すために、95%信頼区間（confidence interval）をつけることになる」
-:::
-
-::: voice-daughter
-私「ふんふん。つけることになるわけね」
-:::
-
-::: voice-father
-お父さん「仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
-:::
-
-::: voice-daughter
-私「ああ、”50%（95%CI 40～60%）”みたいな感じで出てくる、あれのことか。論文でみたことある。40〜60%の場合、95%信頼区間幅は20%ってことね」
-:::
-
-::: voice-father
-お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
-:::
-
-::: voice-daughter
-私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
-:::
-
-::: voice-father
-お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、” π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
-:::
-
-::: voice-daughter
-私「100人で足りてるじゃん」
-:::
-
-::: voice-father
-お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。「信頼区間アプローチ」といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、「仮説検定アプローチ」といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+お父さん「前回は信頼区間のとサンプルサイズだったよね。でも、もしストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究をしたいなら、p値や仮説検定の考え方にそってサンプルサイズを計算しないといけない」
 :::
 
 ::: voice-daughter
@@ -266,7 +191,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうそう。そっちの話をするなら、p値とαエラー・βエラーの関係を説明しないとだな。この前、どこまで話したっけ？」
+お父さん「そうそう。そっちの話をするなら、p値とαエラー・βエラーの関係を説明しないとだな。この前、JCOG9502の論文もってきたとき、どこまで話したっけ？」
 :::
 
 ::: voice-daughter
@@ -276,8 +201,9 @@ a:hover {
 ::: voice-father
 お父さん「じゃあ、話はそこからだね」
 :::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
+::: {.callout-note}
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **αエラーとβエラー**
 
 これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
@@ -296,6 +222,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ややこしいのですが、JCOG9502では症例登録に予定より時間がかかったため、有意水準10%、つまり全生存期間の片側p値を0.1と比べる方式が採用されました。この方式では、LTAに延命効果がなくても、100回に10回はαエラーが生じてしまい、LTAが有効と判定してしまうことになります。つまり、有意水準が5%から10%に高くなると、判断を誤る確率が増える代わりに、サンプルサイズが小さくて済むわけです。
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「いきなりαとかβとか確率とかいわれてもなあ。ついていけないな」
 :::
@@ -313,7 +240,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-daughter
-私「はいはいみますみます。” The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
+私「はいはいみますみます。”The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
 :::
 
 ::: voice-father
@@ -331,7 +258,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ::: panel-tabset
 ### 検出力80%
 
-表2. 2群の生存曲線を比較するためのサンプルサイズ（検出力 80%）\
+表1. 2群の生存曲線を比較するためのサンプルサイズ（検出力 80%）\
 両側 α=0.05, 1−β=0.8\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
@@ -356,7 +283,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ### 検出力90%
 
-表3. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
+表2. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
 両側 α=0.05, 1−β=0.9\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
@@ -389,7 +316,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表2と3は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表3の対応箇所をみてみてよ」
+お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表1と2は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表2の対応箇所をみてみてよ」
 :::
 
 ::: voice-daughter
@@ -405,26 +332,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表3は、検出力90%の検定を行うために必要なサンプルサイズで、表2はそれを検出力80%に緩めたときのもの。表2をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
-:::
-
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **サンプルサイズ設計**
-
-研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（表2と3）を用いることができます。
-
-信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
-
--   割合の真値（復職率など）
--   信頼区間幅
-
-もうひとつの仮説検定アプローチは、臨床試験や仮説検証型の研究に適しています。このアプローチでは、以下の3つの要素が最低でも必要です。
-
--   有意水準（通常5%）
--   検出力（通常80～90%）
--   検出したい効果サイズ（2群間の生存確率の差やハザード比など）
-
-サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
+お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表2は、検出力90%の検定を行うために必要なサンプルサイズで、表1はそれを検出力80%に緩めたときのもの。表1をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
 :::
 
 ::: voice-daughter
@@ -440,19 +348,11 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表2と3は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
+お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表1と2は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
 :::
 
 ::: voice-daughter
-私「でも、お父さん、観察研究だと交絡因子を調整しないといけないっていったじゃない」
-:::
-
-::: voice-father
-お父さん「うん、そういった。でも、交絡因子の影響を前もって予想することは無理だから、表2と3みたいなログランク検定のためのサンプルサイズの公式を、実際には使っている」
-:::
-
-::: voice-daughter
-私「お父さん、あとね。表2と3に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね。
+私「お父さん、あとね。表1と2に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね」
 :::
 
 ::: voice-father
@@ -464,45 +364,79 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアを利用することになる。割付け比を、1:1から1:0.5、1:0.25に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう。検出力80%だと、サンプルサイズは152人から194人、294人になる」
+お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアやRを利用することになる。
+パッケージpowerSurvEpiで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:!、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
 :::
 
+
+```{r warning=FALSE}
+# install.packages("powerSurvEpi") #インストールが必要なら実行
+library(powerSurvEpi)
+
+ssizeCT.default(
+  power = 0.9,
+  k     = 1,
+  pE    = 0.6,                     # ストーマあり群の復職率
+  pC    = 0.8,                     # ストーマなし群の復職率
+  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
+  alpha = 0.05
+)
+ssizeCT.default(
+  power = 0.9,
+  k     = 0.5,
+  pE    = 0.6,                     # ストーマあり群の復職率
+  pC    = 0.8,                     # ストーマなし群の復職率
+  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
+  alpha = 0.05
+)
+ssizeCT.default(
+  power = 0.9,
+  k     = 0.25,
+  pE    = 0.6,                     # ストーマあり群の復職率
+  pC    = 0.8,                     # ストーマなし群の復職率
+  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
+  alpha = 0.05
+)
+```
+
+
+::: voice-father
+お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100人から177人、202に変化するみたいだね」
+:::
+
+
 ::: voice-daughter
-私「へー。このソフトウェアは調査と臨床試験のためのものなの？」
+私「えー、サンプルサイズが思ったより増えちゃった。調査する施設を増やすかどうか考えないと」
 :::
 
 ::: voice-father
-お父さん「診断研究やROC曲線にも使えるから、医学研究のほとんどに対応できると思う」
+お父さん「焦らなくていいよ。真剣に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
 :::
 
-::: voice-daughter
-私「でも、サンプルサイズがすごく増えちゃった。調査する施設を増やすかどうか考えないと」
-:::
 :::::::::::::::::::::::::::::::::
+
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-がん臨床試験では、治療からどの程度生存したかを表す指標として、生存期間中央値（median survival）を求めることがあります。これは生存時間データであるOSから計算される値です。さて、生存期間中央値を報告してよいのは、どのような場合でしょうか？
+片側検定のp値から、両側検定によるp値を計算するにはどうすればよいでしょうか？
 
-1.  半数以上の対象者がイベントを起こしたとき
-2.  目安としてサンプルサイズが100人以上のとき
-3.  すべての対象者が予定された追跡期間を完了したとき
+1.  片側検定のp値を2倍する
+2.  片側検定のp値を2で割る
+3.  計算できない
 4.  1、2、3すべて誤り
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は1です。**
+- **正解は1です**
 
-柔軟に考えてみましょう。生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。もし、予定された追跡期間を全員が完了したとしても、イベントがじゅうぶんに観察されなければ（つまり打ち切りが多かったら）、統計的なテクニックで中央値を計算することはできますが、バイアスが生じる可能性が高くなります。
+コイン投げの例え話を思い出してください。片側（one-sided）p値と両側（two-sided）p値は、コインの片側（表だけ）をみるか、両側（表と裏）をみるかに、それぞれ対応していましたよね。実際、計算された片側p値はp=0.0156、両側p値はp=0.0312でした。つまり、両側p値は、片側p値を2倍することで、求めることができます。
 :::
 
 ### 文献
 
--  Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022
+- [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022]（https://www.kyoto-up.or.jp/9784814003822.html）
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
-
-- Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013
 
 ### Continuation of their story
 
