--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -289,15 +289,15 @@ a:hover {
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は3です。**
+-   **正解は3です**
 
-    この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
+この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
 
-    この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を*p*で書くと、population attributable fractionは、以下の式で表されます。
+この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を*p*で書くと、population attributable fractionは、以下の式で表されます。
 
-    $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+$PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
-    がん検診の例では、*p*=0.5、15年死亡リスク比は*RR*=2なので、これを代入すると、*PAF*=0.5(2-1)/{0.5(2-1)+1}=0.33となり、上の正解と一致します。
+がん検診の例では、*p*=0.5、15年死亡リスク比は*RR*=2なので、これを代入すると、*PAF*=0.5(2-1)/{0.5(2-1)+1}=0.33となり、上の正解と一致します。
 :::
 
 ### Continuation of their story
