--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -384,7 +384,7 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 
 ### 文献
 
-- 田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022
+- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### Continuation of their story
 
