--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -155,7 +155,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
+私「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
@@ -163,7 +163,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「ふーん。じゃあ正しいんだ。ほとんど間違わないってすごいね」
+私「ふーん。じゃあ正しいんだ。ほとんど間違わないってすごいね」
 :::
 
 ::: voice-father
@@ -171,7 +171,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「coverage？つまり、本当に100回に95回あたるかどうか？」
+私「coverage？つまり、本当に100回に95回あたるかどうか？」
 :::
 
 ::: voice-father
@@ -179,7 +179,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「ストーマあり群とストーマなし群ね」
+私「ストーマあり群とストーマなし群ね」
 :::
 
 ::: voice-father
@@ -187,7 +187,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「これがcoverageね」
+私「これがcoverageね」
 :::
 
 ::: voice-father
@@ -195,7 +195,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-娘「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
+私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
 :::
 
 
@@ -284,7 +284,7 @@ print(coverage_200)
 :::
 
 ::: voice-daughter
-娘「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
+私「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
 :::
 
 ::: voice-father
@@ -292,7 +292,7 @@ print(coverage_200)
 :::
 
 ::: voice-daughter
-娘「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
+私「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
 :::
 
 ::: voice-father
@@ -300,7 +300,7 @@ print(coverage_200)
 :::
 
 ::: voice-daughter
-娘「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
+私「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
 :::
 
 ::: voice-father
@@ -318,15 +318,15 @@ print(coverage_800)
 ```
 
 ::: voice-daughter
-娘「ほんとだ。じゃあ調査人数は何人でもいいってことだ」
+私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
 :::
 
 ::: voice-father
-お父さん「どういうこと？」
+お父さん「ん？どういう意味？」
 :::
 
 ::: voice-daughter
-娘「がんサバイバーの調査票を何人に送るかってこと。だって信頼区間の性能は変わらないんでしょ」
+私「がんサバイバー何人に調査票を送るかってこと。だって信頼区間の性能は人数によらないんでしょ」
 :::
 
 ::: voice-father
@@ -414,13 +414,11 @@ print(coverage_800)
 
 ::: voice-father
 お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。"信頼区間アプローチ"といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、"仮説検定アプローチ"といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+:::
 
 ::: voice-daughter
 私「そっか。だいたいわかった。私、明日も出勤だから、また今度教えてよ。おやすみー」
 :::
-
-
-
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **サンプルサイズ設計**
