--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -365,9 +365,13 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ::: voice-father
 お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアやRを利用することになる。
-パッケージpowerSurvEpiで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:!、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
+powerSurvEpiパッケージで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:!、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
 :::
 
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note}
+<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **Rパッケージを用いたサンプルサイズ設計**
 
 ```{r warning=FALSE}
 # install.packages("powerSurvEpi") #インストールが必要なら実行
@@ -398,8 +402,9 @@ ssizeCT.default(
   alpha = 0.05
 )
 ```
+:::
 
-
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
 お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100人から177人、202に変化するみたいだね」
 :::
@@ -412,7 +417,6 @@ ssizeCT.default(
 ::: voice-father
 お父さん「焦らなくていいよ。真剣に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
 :::
-
 :::::::::::::::::::::::::::::::::
 
 
