--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -197,6 +197,7 @@ a:hover {
 ::: voice-daughter
 私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
 :::
+:::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note title="coxph()を用いた95%信頼区間のシミュレーション"}
@@ -283,6 +284,7 @@ print(coverage_200)
 ```
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
 :::
@@ -306,6 +308,7 @@ print(coverage_200)
 ::: voice-father
 お父さん「理論的には当たりにくくなったりはしないよ。95%信頼区間の被覆確率はサンプルサイズによらず95%になるはず。n=100、200、400、800のシミュレーション結果をみてみようか」
 :::
+:::::::::::::::::::::::::::::::::
 
 ```{r warning=FALSE}
 coverage_100 <- calculate_coverage(model="coxph", n=100, hr1=2, hr2=1.5, hr_true=1.5)
@@ -317,6 +320,7 @@ print(coverage_400)
 print(coverage_800)
 ```
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
 :::
@@ -419,10 +423,9 @@ print(coverage_800)
 ::: voice-daughter
 私「そっか。だいたいわかった。私、明日も出勤だから、また今度教えてよ。おやすみー」
 :::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **サンプルサイズ設計**
-
+::: {.callout-note title="サンプルサイズ設計"}
 研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
 
 信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
@@ -438,8 +441,6 @@ print(coverage_800)
 
 サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
 :::
-
-:::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
