--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -153,22 +153,33 @@ a:hover {
 
     はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。それからというもの、父は娘に統計の話をふるチャンスをうかがっていた。
 
-**私「コーヒー飲む？お父さん」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「コーヒー飲む？お父さん」
+:::
 
+::: voice-father
 お父さん「ああ、ありがとう。おいしいね」
+:::
 
-**私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンってすごいね。有効率98%だって」**
+::: voice-daughter
+私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンってすごいね。有効率98%だって」
+:::
 
+::: voice-father
 お父さん「そうだね。でもさ、ワクチンの有効率って意外と計算が難しいんだよ。プラセボに比べてって意味だから」
+:::
 
-**私「ん？100人いたら98人に効くって意味じゃないの？」**
+::: voice-daughter
+私「ん？100人いたら98人に効くって意味じゃないの？」
+:::
 
+::: voice-father
 お父さん「違う違う。プラセボの効果に比べて、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話では誤解されやすい言葉だよね」
+:::
 
-<aside>
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **リスクを比較する指標**
-
+::: {.callout-note title="リスクを比較する指標"}
 医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。群1で得られた疾患リスク（割合）を$\pi_1$、群2の疾患リスク（割合）を$\pi_2$とすると、2群を比較するために、以下のような指標が用いられます。なお、これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。ここでは群2を基準にとっています。
 
 -   リスク差（risk difference、絶対リスク減少）
@@ -222,61 +233,102 @@ a:hover {
 | 　オッズ比        |          |          | 3倍        |
 | 　Excess fraction |          |          | 74%        |
 
-</aside>
+:::
 
-**私「へー、確かにパーセントっていわれるとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」**
+::: voice-daughter
+私「へー、確かにパーセントっていわれるとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
+:::
 
+::: voice-father
 お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ」
+:::
 
-**私「確かにね。数字だけみると、レトリックに騙されちゃいそう。Excess fractionなんて、パーセントがなにを意味するのか謎」**
+::: voice-daughter
+私「確かにね。数字だけみると、レトリックに騙されちゃいそう。Excess fractionなんて、パーセントがなにを意味するのか謎」
+:::
 
+::: voice-father
 お父さん「そっか、そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+:::
 
-**私「ふんふん」**
+::: voice-daughter
+私「ふんふん」
+:::
 
+::: voice-father
 お父さん「残りの2人は、本当はがんだったのに、検診では見つけられなかった。そのため、67歳と73歳で亡くなった。つまり、がん検診後の生存期間は7年と13年。じゃあ、仮にこの2人を60歳のとき根治切除できたとしたら、生存期間は何割長くなるだろう」
+:::
 
-**私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」**
+::: voice-daughter
+私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」**
+:::
 
+::: voice-father
 お父さん「じゃあ、別の質問をするよ。もし、がん検診陽性の2人を60歳のとき根治切除できなかったとしたら、生存期間はどれくらい失われる？」
+:::
 
-**私「(10-15)/15=-0.33だから、33%減っちゃうね」**
+::: voice-daughter
+私「(10-15)/15=-0.33だから、33%減っちゃうね」
+:::
 
+::: voice-father
 お父さん「そう。つまり、陽性2人と陰性2人のどちらをターゲットにするかで、データは同じでも、根治切除の生存期間に寄与する割合が変わってくる。ここが寄与割合の複雑なところなんだ。さっきのexcess fractionは、この例でいうと根治切除できなかった2人をターゲットと考えている。Preventable fractionのターゲットは、根治切除できた2人に対応している」
+:::
 
-**私「なるほど、ターゲット集団を分母にとるのね。ターゲットがあるのが、リスク差とかリスク比とかとの違いってわけだ」**
+::: voice-daughter
+私「なるほど、ターゲット集団を分母にとるのね。ターゲットがあるのが、リスク差とかリスク比とかとの違いってわけだ」
+:::
 
+::: voice-father
 お父さん「いや？効果の指標にはどれも、表に出ないだけでターゲット集団がある。たとえば術後の大腸がん患者を対象にランダム化臨床試験をして、補助化学療法をすると死亡リスク差が-5%になったとするでしょ。これって、術後の大腸がん患者全体に補助化学療法をすべきって解釈にならない？」
+:::
 
-**私「まあねえ」**
+::: voice-daughter
+私「まあねえ」
+:::
 
+::: voice-father
 お父さん「つまり臨床試験の集団全体がターゲット集団になる。因果リスク差とか、因果リスク比っていう言葉があるんだけど、これは集団全体に別の治療をしたときや、集団全体がリスク因子に曝露したとき、リスクがどう変化するかを表してるんだ」
+:::
 
-**私「ふーん。じゃあワクチン有効率はどうなの？」**
+::: voice-daughter
+私「ふーん。じゃあワクチン有効率はどうなの？」
+:::
 
+::: voice-father
 お父さん「ワクチン有効率も臨床試験で推定するよね。だからそのワクチンのターゲット全体が、ワクチンを接種したとき、それがプラセボだったときに比べ、何割感染症が減るかっていう解釈になる。現場では、既存のワクチンが普及していることがほとんどでしょ。そこにワクチン有効率98%の新しいワクチンを投入しても、感染症が98%減ることにはならない」
+:::
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ターゲット集団**
-
+::: {.callout-note title="ターゲット集団"}
 治療や曝露とアウトカムの因果関係を扱うときには、どのような集団を考えているかをはっきりさせる必要があります。一例として、根治切除後の直腸がん患者におけるストーマ造設の有無と復職率との因果関係を考えてみましょう。このときストーマ保有者と非保有者を比較する因果リスク差は、「根治切除後の直腸がん患者全体」をターゲット集団としています。ストーマ保有者と非保有者という別の集団を比べているのに、患者全体がターゲットというのは奇妙にみえるかもしれません。しかし因果推論では、「患者全体がストーマを造設したとき」と「患者全体がストーマを造設しなかったとき」という仮想的な状況を対比することで、ストーマ造設が復職率を低下させたかがわかる、という反事実の考え方をするのです。
-
 :::
 
 お父さん「もうひとつ気を付けないといけないのは、リスクには時間の概念が隠れていること。検診後10年時点の死亡確率を考えてみよう。陽性2人の死亡確率は0%、陰性2人の死亡確率50%だよね。このときのexcess fractionはわかる？」
+:::
 
-**私「うん。(0.5-0)/0.5=1でしょ」**
+::: voice-daughter
+私「うん。(0.5-0)/0.5=1でしょ」
+:::
 
+::: voice-father
 お父さん「そう、つまり根治切除していれば、がん陰性の2人の死亡は100%防げたという意味になる。でもさ、がん検診後、12年経つとどうなる？」
+:::
 
-**私「(0.5-0.5)/0.5=0になるね」**
+::: voice-daughter
+私「(0.5-0.5)/0.5=0になるね」
+:::
 
+::: voice-father
 お父さん「じゃあ、がん検診後、20年経つと？」
+:::
 
-**私「生存者はいなくなるね。(1-1)/1=0かな」**
+::: voice-daughter
+私「生存者はいなくなるね。(1-1)/1=0かな」
+:::
 
+::: voice-father
 お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
+:::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
