--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -149,18 +149,28 @@ a:hover {
 
 ### リスク比とオッズ比って同じだっけ
 
-**私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、リスク比とかオッズ比とか計算したなあ。リスク比とオッズ比って結局同じ？みたいな」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、リスク比とかオッズ比とか計算したなあ。リスク比とオッズ比って結局同じ？みたいな」**
+:::
 
+::: voice-father
 お父さん「ああ、この前、膵がんの数値例で計算したとき、リスク比とオッズ比はどちらも3倍だったね。でも、これはたまたま。もっと正確にいうと、膵がんのようにリスクが低いと、リスク比とオッズ比は近い値になるんだ。ほら、リスク比とオッズ比の数式を見比べてよ。リスク比とオッズ比の違いって、$1-\pi_1$と$1-\pi_2$があるかどうかでしょ。リスクが低いと、ここがほとんど1になるから、リスク比とオッズ比の差がなくなる」
+:::
 
-**私「まあ、私も論文読むとき別に区別してないけど」**
+::: voice-daughter
+私「まあ、私も論文読むとき別に区別してないけど」
+:::
 
+::: voice-father
 お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、オッズ比の平方根を報告した方がいいっていうものもある」
+:::
 
-**私「なにそれ、また増えたの？」**
+::: voice-daughter
+私「なにそれ、また増えたの？」
+:::
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **リスク比はオッズ比の近似か**
+::: {.callout-note title="リスク比はオッズ比の近似か"}
 
 表1は、2群の疾患リスク$\pi_1$と$\pi_2$の数値を0.1から0.9まで動かして、リスク比、オッズ比、オッズ比の平方根（square root of OR）を計算したものです。
 
@@ -181,12 +191,15 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 OR=1 SOR=1 \| 0.50 0.44 0.67 \| 0.33 0.25 0.51 \| 0.25 0.17 0.41 \| 0.20 0.11 0.33 \| 0.17 0.07 0.27 \| 0.14 0.05 0.22 \| 0.13 0.03 0.17 \| 0.11 0.01 0.11 \| \| 0.2 \| \| 1 1 1 \| 0.67 0.58 0.76 \| 0.50 0.38 0.61 \| 0.40 0.25 0.50 \| 0.33 0.17 0.41 \| 0.29 0.11 0.33 \| 0.25 0.06 0.25 \| 0.22 0.03 0.17 \| \| 0.3 \| \| \| 1 1 1 \| 0.75 0.64 0.80 \| 0.60 0.43 0.65 \| 0.50 0.29 0.53 \| 0.43 0.18 0.43 \| 0.38 0.11 0.33 \| 0.33 0.05 0.22 \| \| 0.4 \| \| \| \| 1 1 1 \| 0.80 0.67 0.82 \| 0.67 0.44 0.67 \| 0.57 0.29 0.53 \| 0.50 0.17 0.41 \| 0.44 0.07 0.27 \| \| 0.5 \| \| \| \| \| 1 1 1 \| 0.83 0.67 0.82 \| 0.71 0.43 0.65 \| 0.63 0.25 0.50 \| 0.56 0.11 0.33 \| \| 0.6 \| \| \| \| \| \| 1 1 1 \| 0.86 0.64 0.80 \| 0.75 0.38 0.61 \| 0.67 0.17 0.41 \| \| 0.7 \| \| \| \| \| \| \| 1 1 1 \| 0.88 0.58 0.76 \| 0.78 0.26 0.51 \| \| 0.8 \| \| \| \| \| \| \| \| 1 1 1 \| 0.89 0.44 0.67 \| \| 0.9 \| \| \| \| \| \| \| \| \| 1 1 1 \|
 :::
 
-**私「平方根なんて論文書くとき勝手に計算していいのかね」**
+::: voice-daughter
+私「平方根なんて論文書くとき勝手に計算していいのかね」
+:::
 
+::: voice-father
 お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。Methodsで説明していれば。でも、ふつうのコホート研究をするんだったら、リスク比を計算するのが素直だと思うけど」
+:::
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ケース・コントロール研究とオッズ比**
+::: {.callout-note title="ケース・コントロール研究とオッズ比"}
 
 古典的なケース・コントロール研究は、コホートの中から疾患を発生したケースを特定し、疾患を発生しなかったものの中からコントロールを選択し、ケースとコントロールの曝露状況を比較する研究です。言い換えると、この研究デザインでは、一部の集団のみ（ケースとコントロールのみ）について、過去の曝露状況を調査します。そうすると、コホートの一部しか曝露状況がわからないから、曝露群・非曝露群のリスクの分母がわかりませんよね。そこで、リスク比の代わりに「曝露オッズ比」を求める、と疫学の教科書には書かれています。ただし、古典的なケース・コントロール研究とは違い、最近ではデータベースが利用できたり、研究デザインを工夫していたりするため、リスク比を計算できる状況も増えてきています。
 :::
