--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -149,19 +149,28 @@ a:hover {
 
 ### リスク差とリスク比、どっちを使う？
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「医学部で習ったことがあるかもしれないけど、コホート研究とリスクが疫学の基本なんだ。だから公衆衛生や臨床研究をしている人の間では、オッズ比よりリスク比の方がわかりやすいとされている。一方でね、統計学で注目するのは、それぞれの指標の数学的な性質なんだ。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じって言ったらいいかな」
+:::
 
-**私「ふーんそうなんだ」**
+::: voice-daughter
+私「ふーんそうなんだ」
+:::
 
+::: voice-father
 お父さん「後は、ケース・コントロール研究のような、コホートの一部の情報しかない状況でも計算できるし、ロジスティック回帰のようなモデリングするとき利用しやすいのがいいところかな。悪い面はね、層別解析をしたとき、ちょっと不自然な計算結果になる」
+:::
 
-**私「へー。それは困るじゃない。層別なんてしたことないけど」**
+::: voice-daughter
+私「へー。それは困るじゃない。層別なんてしたことないけど」**
+:::
 
+::: voice-father
 お父さん「次の2つの表を比べてみてよ」
+:::
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **層別した指標の併合可能性**
-
+::: {.callout-note title="層別した指標の併合可能性"}
 表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
 
 まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
@@ -202,17 +211,31 @@ a:hover {
 | 　オッズ比          |            |                | 0.17倍     |
 :::
 
-**私「ていうかさ。どうせ割合同士を比べるんだから、わざわざ比を計算する必要ないと思うんだけど。パーセントの差でよくない？＋10%とか－10%とか。じゅうぶんでしょ」**
+::: voice-daughter
+私「ていうかさ。どうせ割合同士を比べるんだから、わざわざ比を計算する必要ないと思うんだけど。パーセントの差でよくない？＋10%とか－10%とか。じゅうぶんでしょ」**
+:::
 
+::: voice-father
 お父さん「うん、リスク差はもっと使われていいと思う。でも、リスク差にも欠点がある。複数の研究を集めてメタアナリシスをするとき、それぞれの研究から得られたリスク差やリスク比をひとつの値に要約するでしょ」
+:::
 
-**私「ああ、みたことある」**
+::: voice-daughter
+私「ああ、みたことある」
+:::
 
+::: voice-father
 お父さん「このとき問題になるのが、コントロール群（プラセボ群や緩和療法群）で観察されたリスクが、研究によって低かったり高かったりすることなんだ。同じ疾患や治療を扱っていても、予後のいい患者ばかり集めた研究もあれば、予後の悪い患者を対象にした研究もあるでしょ」
+:::
 
-**私「そりゃあるよね」**
+::: voice-daughter
+私「そりゃあるよね」
+:::
 
+::: voice-father
 お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論になる」
+:::
+
+
 
 臨床研究の結果報告では、絶対指標（リスク差やKaplan-Meier曲線）と相対指標（リスク比やハザード比）の両方を示す
 
