--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -177,7 +177,7 @@ a:hover {
 ::: voice-father
 お父さん「違う違う。プラセボの効果に比べて、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話では誤解されやすい言葉だよね」
 :::
-
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="リスクを比較する指標"}
 医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。群1で得られた疾患リスク（割合）を$\pi_1$、群2の疾患リスク（割合）を$\pi_2$とすると、2群を比較するために、以下のような指標が用いられます。なお、これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。ここでは群2を基準にとっています。
@@ -235,6 +235,7 @@ a:hover {
 
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「へー、確かにパーセントっていわれるとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
 :::
@@ -298,11 +299,14 @@ a:hover {
 ::: voice-father
 お父さん「ワクチン有効率も臨床試験で推定するよね。だからそのワクチンのターゲット全体が、ワクチンを接種したとき、それがプラセボだったときに比べ、何割感染症が減るかっていう解釈になる。現場では、既存のワクチンが普及していることがほとんどでしょ。そこにワクチン有効率98%の新しいワクチンを投入しても、感染症が98%減ることにはならない」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="ターゲット集団"}
 治療や曝露とアウトカムの因果関係を扱うときには、どのような集団を考えているかをはっきりさせる必要があります。一例として、根治切除後の直腸がん患者におけるストーマ造設の有無と復職率との因果関係を考えてみましょう。このときストーマ保有者と非保有者を比較する因果リスク差は、「根治切除後の直腸がん患者全体」をターゲット集団としています。ストーマ保有者と非保有者という別の集団を比べているのに、患者全体がターゲットというのは奇妙にみえるかもしれません。しかし因果推論では、「患者全体がストーマを造設したとき」と「患者全体がストーマを造設しなかったとき」という仮想的な状況を対比することで、ストーマ造設が復職率を低下させたかがわかる、という反事実の考え方をするのです。
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「もうひとつ気を付けないといけないのは、リスクには時間の概念が隠れていること。検診後10年時点の死亡確率を考えてみよう。陽性2人の死亡確率は0%、陰性2人の死亡確率50%だよね。このときのexcess fractionはわかる？」
 :::
 
@@ -329,6 +333,7 @@ a:hover {
 ::: voice-father
 お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
