--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -181,6 +181,7 @@ a:hover {
 ::: voice-father
 お父さん「えーっと、教科書通りに説明するとこうなるんだけど」
 :::
+:::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note title="リスクと生存曲線・ハザード比の関係"}
@@ -222,6 +223,7 @@ $\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
     $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「わからん。数式はわからん」
 :::
@@ -229,7 +231,7 @@ $\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
 ::: voice-father
 お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ」
 :::
-
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
