--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -169,6 +169,7 @@ a:hover {
 ::: voice-daughter
 私「なにそれ、また増えたの？」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="リスク比はオッズ比の近似か"}
 
@@ -191,6 +192,7 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 OR=1 SOR=1 \| 0.50 0.44 0.67 \| 0.33 0.25 0.51 \| 0.25 0.17 0.41 \| 0.20 0.11 0.33 \| 0.17 0.07 0.27 \| 0.14 0.05 0.22 \| 0.13 0.03 0.17 \| 0.11 0.01 0.11 \| \| 0.2 \| \| 1 1 1 \| 0.67 0.58 0.76 \| 0.50 0.38 0.61 \| 0.40 0.25 0.50 \| 0.33 0.17 0.41 \| 0.29 0.11 0.33 \| 0.25 0.06 0.25 \| 0.22 0.03 0.17 \| \| 0.3 \| \| \| 1 1 1 \| 0.75 0.64 0.80 \| 0.60 0.43 0.65 \| 0.50 0.29 0.53 \| 0.43 0.18 0.43 \| 0.38 0.11 0.33 \| 0.33 0.05 0.22 \| \| 0.4 \| \| \| \| 1 1 1 \| 0.80 0.67 0.82 \| 0.67 0.44 0.67 \| 0.57 0.29 0.53 \| 0.50 0.17 0.41 \| 0.44 0.07 0.27 \| \| 0.5 \| \| \| \| \| 1 1 1 \| 0.83 0.67 0.82 \| 0.71 0.43 0.65 \| 0.63 0.25 0.50 \| 0.56 0.11 0.33 \| \| 0.6 \| \| \| \| \| \| 1 1 1 \| 0.86 0.64 0.80 \| 0.75 0.38 0.61 \| 0.67 0.17 0.41 \| \| 0.7 \| \| \| \| \| \| \| 1 1 1 \| 0.88 0.58 0.76 \| 0.78 0.26 0.51 \| \| 0.8 \| \| \| \| \| \| \| \| 1 1 1 \| 0.89 0.44 0.67 \| \| 0.9 \| \| \| \| \| \| \| \| \| 1 1 1 \|
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「平方根なんて論文書くとき勝手に計算していいのかね」
 :::
@@ -198,6 +200,7 @@ OR=1 SOR=1 \| 0.50 0.44 0.67 \| 0.33 0.25 0.51 \| 0.25 0.17 0.41 \| 0.20 0.11 0.
 ::: voice-father
 お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。Methodsで説明していれば。でも、ふつうのコホート研究をするんだったら、リスク比を計算するのが素直だと思うけど」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="ケース・コントロール研究とオッズ比"}
 
