--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -169,6 +169,7 @@ a:hover {
 ::: voice-father
 お父さん「次の2つの表を比べてみてよ」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="層別した指標の併合可能性"}
 表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
@@ -211,6 +212,7 @@ a:hover {
 | 　オッズ比          |            |                | 0.17倍     |
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ていうかさ。どうせ割合同士を比べるんだから、わざわざ比を計算する必要ないと思うんだけど。パーセントの差でよくない？＋10%とか－10%とか。じゅうぶんでしょ」**
 :::
@@ -234,6 +236,7 @@ a:hover {
 ::: voice-father
 お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論になる」
 :::
+::::::::::::::::::::::::::::::::: 
 
 
 
